bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:2: error: value and is not a member of Boolean
  if (7<=hour and hour<=20){
              ^ParotTrouble:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if (talking ==true){
    ^