bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (7<=hour and hour<=20){
    return false
  }else{
    if (talking ==true){
      return true
    }
  }
}